# Nemea-modules-OpenWRT

./: Makefile  README.md
patches/: 001-removemodules.patch  002-removeopenmp.patch
src/: Makefile.am  configure.ac
src/demux/: Makefile.am  demux.cpp  fields.c  fields.h
src/detector/: Analyzer.cpp  Analyzer.h  ConfigParser.cpp  ConfigParser.h  DataDetector.cpp  Makefile.am  README.md  compile.sh  fields.cpp
src/mux/: Makefile.am  config.h  fields.c  fields.h  mux.cpp
